# rust-webview

./: README.md
java-client/: build.gradle
java-client/gradle/wrapper/: gradle-wrapper.properties
java-client/src/main/java/webview/client/: WebviewClient.java
java-client/src/main/java/webview/client/demo/: NioConcurrentClient.java
webview-host/: Cargo.toml
webview-host/src/: main.rs  multiWindow.rs
webview-host/src/communicate/: decoder.rs  mod.rs  session.rs  session_factory.rs  socket_server.rs  tcp_session.rs  traits.rs
webview-host/src/messaging/: message.rs  messageHandler.rs  mod.rs  sessionManager.rs
webview-host/src/webview/: browser.rs  mod.rs  webview_handler.rs
