[package]
name = "xbrowser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cargo-deb = "3.2.0"
cookie = "0.18.1"
gtk = "0.15"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
mini-redis = "0.4"
tracing = "0.1.41"
uuid = "1.17.0"
winit = "0.30.11"
wry = "0.24.11"
x11-dl = "2.21.0"
bytes = "1.10.1"

[package.metadata.deb]
maintainer = "Meat <tangqianchong@gmail.com>"
section = "utils"
depends = "$auto"
